# bookmark-vault

./: .gitignore  AGENTS.md  README.md  info.txt  package.json  render.yaml
.gemini/skills/ai-engineer/: SKILL.md
.gemini/skills/backend-architect/: SKILL.md
.gemini/skills/code-reviewer/: SKILL.md
.gemini/skills/database-optimizer/: SKILL.md
.gemini/skills/frontend-developer/: SKILL.md
.gemini/skills/reality-checker/: SKILL.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/auth_operations/: mod.rs  model.rs  service.rs
backend/src/bookmark_operations/: mod.rs  model.rs  service.rs
backend/src/collection_operations/: mod.rs  model.rs  service.rs
backend/src/middleware/: auth.rs
backend/src/routes/: mod.rs
backend/src/search_operations/: mod.rs  model.rs  service.rs
backend/src/utils/: config.rs  db.rs  errors.rs  gemini.rs  mod.rs  scraper.rs
frontend/: DESIGN.md  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BookmarkCard.jsx  BookmarkDetail.jsx  BookmarkGrid.jsx  CommandPalette.jsx  FolderPicker.jsx  FolderSection.jsx  ImportDropzone.jsx  ImportProgress.jsx  LandingNavbar.jsx  Navbar.jsx  PaginationDock.jsx  SearchBar.jsx  SearchSettingsPanel.jsx  Sidebar.jsx  TagFilter.jsx  ThemeProvider.jsx  ThemeToggle.jsx
product-roadmap/: Embedding cache plan.md  GAP_RESEARCH_KARAKEEP.md  GOALS.md  IMPLEMENTATION_PLAN.md  README.md  SEARCH_AND_EMBEDDING_CACHE_IMPLEMENTATION.md  TASKS.md  bookmark-vault-prompt.md  stitch_design_export.txt
(+31 files in other folders)
